k8s-resources/r-shiny-example/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: r-shiny-example
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: rshiny.apps.analytics.kops.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: r-shiny-example
          servicePort: 80
        path: /
